// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoansReducer LOANS_LOAD_SUCCESS should add all loans in the payload when none exist 1`] = `
Object {
  "entities": Object {
    "0000015864": Object {
      "borrower": "JEFFERY BARRON",
      "borrowerPrimaryEmailAddress": "JMPROTEK@MTAONLINE.NET",
      "borrowerPrimaryPhoneNumber": "9078926021",
      "borrowerPrimarySSN": "xxx-xx-6553",
      "borrowerSecondaryPhoneNumber": null,
      "borrowerSecondarySSN": "xxx-xx-7172",
      "coBorrower": "MICHELLE BARRON",
      "loanNumber": "0000015864",
      "propertyAddress1": "11765W BALLYSHANNON",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
    "0000016534": Object {
      "borrower": "MIGUEL RIOS",
      "borrowerPrimaryEmailAddress": null,
      "borrowerPrimaryPhoneNumber": "7132050366",
      "borrowerPrimarySSN": "xxx-xx-2458",
      "borrowerSecondaryPhoneNumber": "7136579592",
      "borrowerSecondarySSN": "",
      "coBorrower": null,
      "loanNumber": "0000016534",
      "propertyAddress1": "11111  CLARK RD",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
  },
  "ids": Array [
    "0000015864",
    "0000016534",
  ],
  "isLoading": false,
  "loaded": true,
  "loanDetail": null,
  "loanQuery": null,
  "selectedLoanId": null,
}
`;

exports[`LoansReducer SELECT should set the selected loan number on the state 1`] = `
Object {
  "entities": Object {
    "0000015864": Object {
      "borrower": "JEFFERY BARRON",
      "borrowerPrimaryEmailAddress": "JMPROTEK@MTAONLINE.NET",
      "borrowerPrimaryPhoneNumber": "9078926021",
      "borrowerPrimarySSN": "xxx-xx-6553",
      "borrowerSecondaryPhoneNumber": null,
      "borrowerSecondarySSN": "xxx-xx-7172",
      "coBorrower": "MICHELLE BARRON",
      "loanNumber": "0000015864",
      "propertyAddress1": "11765W BALLYSHANNON",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
    "0000016534": Object {
      "borrower": "MIGUEL RIOS",
      "borrowerPrimaryEmailAddress": null,
      "borrowerPrimaryPhoneNumber": "7132050366",
      "borrowerPrimarySSN": "xxx-xx-2458",
      "borrowerSecondaryPhoneNumber": "7136579592",
      "borrowerSecondarySSN": "",
      "coBorrower": null,
      "loanNumber": "0000016534",
      "propertyAddress1": "11111  CLARK RD",
      "propertyCity": "HOUSTON",
      "source": "Fay",
      "sourceID": 1,
    },
  },
  "ids": Array [
    "0000015864",
    "0000016534",
  ],
  "isLoading": false,
  "loaded": true,
  "loanDetail": null,
  "loanQuery": null,
  "selectedLoanId": "0000015864",
}
`;

exports[`LoansReducer Selectors selectId should return the selected id 1`] = `"0000015864"`;
